# preprocess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: main.cpp
preprocess/include/preprocess/: example.hpp
preprocess/scripts/: example.lua
src/: main.cpp
